<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fleetingpasswordmanager.MainActivity" >

    <TextView
        android:id="@+id/master_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_password_label" />

    <EditText
        android:id="@+id/master_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_label"
        android:inputType="text" />

    <EditText
        android:id="@+id/url_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
    </EditText>
        
    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label" />
    
    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/length_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length_label" />
    
    <Spinner
        android:id="@+id/length_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/generated_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generated_password_label" />
    
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:editable="false"
        android:textIsSelectable="true" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_password_button_text"
        android:onClick="showPassword" />
   
</LinearLayout>
